--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-setup",
-  "homepage": "https://mounira94.github.io/microbiological-safety.git",
+  "homepage": "https://mounira94.github.io/microbiological-safety/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
